# poke-agent

./: .gitignore  .gitmodules  eval.py  justfile  pyproject.toml
agent/: idk.py  reinforcement_learning.py  test_metamon.py  test_poke_env.py  util.py
agent/model/: feature_lookup.py  hybrid_embedding.py  timestep_encoder.py  to_vec.py
data/: FEATURES.md  README.md
data/final/: abilities.json  items.json  moves.json  pokemon.json  pokemon_embeddings.json
data/lookup/: abilities.json  items.json  moves.json  pokemon.json
data/processed/: abilities.json  items.json  moves.json  pokemon.json
data/raw/: abilities.json  abilities_text.json  items.json  items_text.json  moves.json  moves_text.json  pokedex.json  pokedex_text.json
data/tensors/: abilities.pt  items.pt  moves.pt  pokemon.pt
data_processing/: README.md  consts.py  package-lock.json  process.py  to_vec.py  tsconfig.json  util.py
data_processing/get_raw/: README.md  package-lock.json  package.json  tsconfig.json
data_processing/get_raw/src/: main.ts
data_processing/process_final/: __init__.py  process_abilities.py  process_items.py  process_moves.py  process_pokemon.py
data_processing/process_raw/: __init__.py  process_abilities.py  process_items.py  process_moves.py  process_pokemon.py
data_processing/process_tensors/: __init__.py  process.py  process_abilities.py  process_items.py  process_moves.py  process_pokemon.py
data_processing/src/: main.ts
data_processing/util/: __init__.py  to_vec.py  type_chart.py  util.py
model/: CustomObservationSpace.py  feature_lookup.py  model.py  teams.py  test.py  test_poke_env.py  timestep_encoder.py  to_vec.py  util.py
