[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "poke-agent"
version = "0.0.0a"
description = ""
readme = "README.md"
requires-python = "==3.12.*"
license = {text = ""}
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
keywords = []
classifiers = []
dependencies = [
    "icecream>=2.1",
    "ipykernel",
    "torch>=2.6",
    "torchvision",
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "matplotlib>=3.4.0",
    "scikit-learn>=1.0.0",
    "scipy>=1.7.0",
    "click>=8.0",
    "pyyaml>=5.4.0",
    "requests>=2.25.0",
    "pathlib-mate",
    "tqdm>=4.60.0",
    "stable_baselines3",
    "poke-env"
]

[tool.setuptools.packages.find]
where = [".", "modules/metamon"]
include = ["inn_agent*", "metamon*", "pokechamp*"]

[project.optional-dependencies]
dev = [
    "poke-agent[metamon]",
    "poke-agent[pokechamp]",
]

metamon = [
    "gymnasium>=0.26,<=0.29.1",
    "numpy",
    "gin-config",
    "wandb",
    "einops",
    "tqdm",
    "lz4",
    "termcolor",
    "huggingface_hub",
    "datasets",
#    "poke-env @ git+https://github.com/UT-Austin-RPL/poke-env.git",
#    "amago @ git+https://github.com/UT-Austin-RPL/amago.git"
]

pokechamp = [
    "orjson",
    "matplotlib",
    "scipy",
    "scikit-learn",
    "torch",
    "transformers",
    "accelerate",
    "wandb",
    "evaluate",
    "datasets",
    # flash_attn # optional
    "asyncio",
    "websockets",
    "openai",
    "bitsandbytes",
]


[project.urls]
Repository = "https://github.com/alexsiracusa/poke-agent"

[project.scripts]